@@ -4,12 +4,11 @@ envdir \- runs another program with environment modified according to files
 in a specified directory.
 
 .SH SYNOPSIS
-\fBenvdir\fR [ -c ] \fId\fR \fIchild\fR
+\fBenvdir\fR [ -cwi ] \fId\fR \fIchild\fR
 
 .SH DESCRIPTION
 \fId\fR is a single argument. \fIchild\fR consists of one or more
-arguments. If you pass the -\fBc\fR argument, all existing environment is
-cleared before modifying any environment variables.
+arguments.
 
 \fBenvdir\fR sets various environment variables as specified by files in
 the directory named \fId\fR. It then runs \fIchild\R.
@@ -21,15 +20,16 @@ name \fIs\fR must not contain =. Spaces and tabs at the end of \fIt\fR are
 removed. Nulls in \fIt\fR are changed to newlines in the environment
 variable. If the file \fIs\fR is completely empty (0 bytes long),
 \fBenvdir\fR removes an environment variable named \fIs\fR if one exists,
-without adding a new variable.
+without adding a new variable. \fBenvdir\fb reads a maximum of 256 bytes
+from \fIs\fR.
 
 If \fBenvdir\fR finds a link named .\fIenvdir\fR pointing to a directory, or a
 directory named .\fIenvdir\fR, it enters that directory and modifies
 environment variables according to files in .\fIenvdir\fR. \fBenvdir\fR avoids
 infinite recursive loops, by storing the inode number of directories
 visited and checking against the list. Any directory already processed is
-silently ignored. Files in .\fIenvdir\fR are read first to prevent. This
-prevents environment variables in .\fIenvdir\fR from overriding or deleting
+silently ignored. Files in .\fIenvdir\fR are read first. This prevents
+environment variables in .\fIenvdir\fR from overriding or deleting
 environment variables set in \fId\fR. Apart from .\fIenvdir\fR,
 \fBenvdir\fR skips all files/directories starting with the '.' dot
 character.
@@ -48,6 +48,27 @@ removed. Nulls in \fIt\fR are changed to newlines in the environment
 variable. If \fBenvdir\fR finds a line \fIs\fR, without =, \fBenvdir\fR
 removes an environment variable named \fIs\fR if one exists, without adding
 a new variable.
+
+In case of any error, \fBenvdir\fR will not modify or add to the existing
+set of environment variables. In case of error, \fBenvdir\fR will exit 111
+without executing \fIchild\fR unless the \fB-w\fR has been specified.
+
+.SH OPTIONS
+.TP
+.B \-c
+This option clears all existing environment variables before modifying any
+environment variables.
+
+.TP
+.B \-w
+This option causes envdir to issue warnings on encountering errors instead
+of quitting before executing \fIchild\fR.
+
+.TP
+.B \-i
+This option ignores if it cannot read a file in \fId\fR. This allows the
+system administrator to specify different access to different users for
+any environment variable
 
 .SH EXIT CODES
 \fBenvdir\fR exits 111 if it has trouble reading \fId\fR, if it runs out of
